--- a/cuppa/src/index.html
+++ b/cuppa/src/index.html
@@ -5,6 +5,7 @@
   <title>Cuppa</title>
   <base href="/">
 
+  <meta name="theme-color" content="#B5DDEC">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
